--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
