--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
