--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
+    "@hookform/resolvers": "^5.2.0",
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
     "@reduxjs/toolkit": "^2.8.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.61.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
