--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,12 @@
     "@fontsource/roboto": "^5.2.6",
     "@hookform/resolvers": "^5.2.0",
     "@mui/icons-material": "^6.4.12",
+    "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^6.4.12",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.8.1",
+    "@stripe/stripe-js": "^7.7.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
@@ -37,7 +42,7 @@
     "globals": "^16.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0",
+    "vite": "^7.0.6",
     "vite-plugin-mkcert": "^1.17.8"
   }
 }
