--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,7 @@
   "Cloudinary": {
     "CloudName": "dboafrisg",
     "ApiKey": "788571844154285",
-    "ApiSecret": "hnSz9gyzLzvu6TrpiXrnEowWZ5w"
+    "ApiSecret": "removed" //kindly add this before starting 
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
